fix: profile pic not aligned on navbar on smaller devices

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -78,7 +78,6 @@
   width: 30px;
   height: 30px;
   border-radius: 50%;
-  margin-left: 10px;
   object-fit: cover;
   cursor: pointer;
   align-self: center;
@@ -140,5 +139,10 @@
     font-size: 1.2rem;
     margin-left: 1.4rem;
     flex: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .home {
+    margin-bottom: 5px;
   }
 }
